// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Node > should render 1`] = `
<div>
  <div
    aria-current="false"
    aria-disabled="false"
    aria-expanded="false"
    aria-selected="false"
    data-depth="1"
    data-disabled="false"
    data-node=""
    data-path="0"
    data-state="closed"
    role="treeitem"
  >
    <div
      data-node-content=""
    >
      <!---->
       
      <div
        data-node-item=""
      >
        <!---->
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        
        <!---->
      </div>
    </div>
     
    <!---->
  </div>
  
</div>
`;

exports[`Node > should render 2`] = `
<div>
  <div
    aria-current="false"
    aria-disabled="false"
    aria-expanded="false"
    aria-selected="false"
    data-depth="1"
    data-disabled="false"
    data-node=""
    data-path="0"
    data-state="closed"
    role="treeitem"
  >
    <div
      data-node-content=""
    >
      <!---->
       
      <div
        data-node-item=""
      >
        <!---->
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        
        <!---->
      </div>
    </div>
     
    <!---->
  </div>
  
</div>
`;

exports[`Node > should render as a sibling 1`] = `
<div>
  <div
    aria-current="false"
    aria-disabled="false"
    aria-expanded="false"
    aria-selected="false"
    data-depth="1"
    data-disabled="false"
    data-node=""
    data-path="0"
    data-state="closed"
    role="treeitem"
  >
    <div
      data-node-content=""
    >
      <!---->
      <span
        class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
        data-tag-line-sibling=""
        data-tag-tree-line=""
      >
        <!---->
        <!---->
        <i
          class="row-span-2 border-r"
        />
        
        
        <!---->
      </span>
      
      <!---->
       
      <div
        data-node-item=""
      >
        <!---->
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        
        <!---->
      </div>
    </div>
     
    <!---->
  </div>
  
</div>
`;

exports[`Node > should render as last sibling 1`] = `
<div>
  <div
    aria-current="false"
    aria-disabled="false"
    aria-expanded="false"
    aria-selected="false"
    data-depth="1"
    data-disabled="false"
    data-node=""
    data-path="3"
    data-state="closed"
    role="treeitem"
  >
    <div
      data-node-content=""
    >
      <!---->
      <span
        class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
        data-tag-line-last=""
        data-tag-tree-line=""
      >
        <!---->
        <i
          class="border-r"
        />
         
        <i
          class="border-b"
        />
        
        <!---->
      </span>
      
      <!---->
       
      <div
        data-node-item=""
      >
        <!---->
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        
        <!---->
      </div>
    </div>
     
    <!---->
  </div>
  
</div>
`;

exports[`Node > should render having child 1`] = `
<div>
  <div
    aria-current="false"
    aria-disabled="false"
    aria-expanded="false"
    aria-selected="false"
    data-depth="2"
    data-disabled="false"
    data-node=""
    data-path="0-0"
    data-state="closed"
    role="treeitem"
  >
    <div
      data-node-content=""
    >
      <!---->
      <span
        class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
        data-tag-line-sibling=""
        data-tag-tree-line=""
      >
        <!---->
        <!---->
        <i
          class="row-span-2 border-r"
        />
        
        
        <!---->
      </span>
      
      <!---->
      <span
        class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
        data-tag-line-child=""
        data-tag-tree-line=""
      >
        <!---->
        <!---->
        <i
          class="col-span-1 row-span-2 border-r"
        />
         
        <i
          class="border-b"
        />
        
        
        <!---->
      </span>
      
      <!---->
       
      <div
        data-node-item=""
      >
        <!---->
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 2
        </p>
        <!---->
        
        <!---->
      </div>
    </div>
     
    <!---->
  </div>
  
</div>
`;

exports[`Node > should render with different states 1`] = `
<div>
  <div
    aria-current="false"
    aria-disabled="false"
    aria-expanded="false"
    aria-selected="false"
    data-depth="1"
    data-disabled="false"
    data-node=""
    data-path="0"
    data-state="closed"
    role="treeitem"
  >
    <div
      data-node-content=""
    >
      <!---->
      <span
        class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
        data-tag-line-child=""
        data-tag-tree-line=""
      >
        <!---->
        <!---->
        <i
          class="col-span-1 row-span-2 border-r"
        />
         
        <i
          class="border-b"
        />
        
        
        <!---->
      </span>
      
      <!---->
      <icon
        aria-checked="false"
        aria-label="expand"
        class="w-4"
        data-disabled="false"
        data-size="small"
        data-state="closed"
        data-tag-icon="true"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-closed"
        />
        <!---->
      </icon>
      
      <!---->
       
      <div
        data-node-item=""
      >
        <!---->
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        
        <!---->
      </div>
    </div>
     
    <!---->
  </div>
  
</div>
`;

exports[`Node > should render with different states 2`] = `
<div>
  <div
    aria-current="false"
    aria-disabled="false"
    aria-expanded="true"
    aria-selected="false"
    data-depth="1"
    data-disabled="false"
    data-node=""
    data-path="0"
    data-state="opened"
    role="treeitem"
  >
    <div
      data-node-content=""
    >
      <!---->
      <span
        class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
        data-tag-line-child=""
        data-tag-tree-line=""
      >
        <!---->
        <!---->
        <i
          class="col-span-1 row-span-2 border-r"
        />
         
        <i
          class="border-b"
        />
        
        
        <!---->
      </span>
      
      <!---->
      <icon
        aria-checked="false"
        aria-label="collapse"
        class="w-4"
        data-disabled="false"
        data-size="small"
        data-state="opened"
        data-tag-icon="true"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-opened"
        />
        <!---->
      </icon>
      
      <!---->
       
      <div
        data-node-item=""
      >
        <!---->
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        
        <!---->
      </div>
    </div>
     
    <!---->
  </div>
  
</div>
`;

exports[`Node > should render with different states 3`] = `
<div>
  <div
    aria-current="false"
    aria-disabled="false"
    aria-expanded="true"
    aria-selected="true"
    data-depth="1"
    data-disabled="false"
    data-node=""
    data-path="0"
    data-state="opened"
    role="treeitem"
  >
    <div
      data-node-content=""
    >
      <!---->
      <span
        class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
        data-tag-line-child=""
        data-tag-tree-line=""
      >
        <!---->
        <!---->
        <i
          class="col-span-1 row-span-2 border-r"
        />
         
        <i
          class="border-b"
        />
        
        
        <!---->
      </span>
      
      <!---->
      <icon
        aria-checked="false"
        aria-label="collapse"
        class="w-4"
        data-disabled="false"
        data-size="small"
        data-state="opened"
        data-tag-icon="true"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-opened"
        />
        <!---->
      </icon>
      
      <!---->
       
      <div
        data-node-item=""
      >
        <!---->
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        
        <!---->
      </div>
    </div>
     
    <!---->
  </div>
  
</div>
`;

exports[`Node > should render with different states 4`] = `
<div>
  <div
    aria-current="true"
    aria-disabled="false"
    aria-expanded="true"
    aria-selected="true"
    data-depth="1"
    data-disabled="false"
    data-node=""
    data-path="0"
    data-state="opened"
    role="treeitem"
  >
    <div
      data-node-content=""
    >
      <!---->
      <span
        class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
        data-tag-line-child=""
        data-tag-tree-line=""
      >
        <!---->
        <!---->
        <i
          class="col-span-1 row-span-2 border-r"
        />
         
        <i
          class="border-b"
        />
        
        
        <!---->
      </span>
      
      <!---->
      <icon
        aria-checked="false"
        aria-label="collapse"
        class="w-4"
        data-disabled="false"
        data-size="small"
        data-state="opened"
        data-tag-icon="true"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-opened"
        />
        <!---->
      </icon>
      
      <!---->
       
      <div
        data-node-item=""
      >
        <!---->
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        
        <!---->
      </div>
    </div>
     
    <!---->
  </div>
  
</div>
`;

exports[`Node > should render with icon 1`] = `
<div>
  <div
    aria-current="false"
    aria-disabled="false"
    aria-expanded="false"
    aria-selected="false"
    data-depth="1"
    data-disabled="false"
    data-node=""
    data-path="0"
    data-state="closed"
    role="treeitem"
  >
    <div
      data-node-content=""
    >
      <!---->
      <span
        class="grid h-full w-4 min-w-4 grid-cols-2 grid-rows-2"
        data-tag-line-child=""
        data-tag-tree-line=""
      >
        <!---->
        <!---->
        <i
          class="col-span-1 row-span-2 border-r"
        />
         
        <i
          class="border-b"
        />
        
        
        <!---->
      </span>
      
      <!---->
      <icon
        aria-checked="false"
        aria-label="expand"
        class="w-4"
        data-disabled="false"
        data-size="small"
        data-state="closed"
        data-tag-icon="true"
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="node-closed"
        />
        <!---->
      </icon>
      
      <!---->
       
      <div
        data-node-item=""
      >
        <!---->
        <!---->
        <!---->
        
        <!---->
         
        <p>
          Item 1
        </p>
        <!---->
        
        <!---->
      </div>
    </div>
     
    <!---->
  </div>
  
</div>
`;
